--- a/index.html
+++ b/index.html
@@ -186,8 +186,16 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
             </div>
         </div>
         <div class="col-md-3 hidden-xs hidden-sm">
-            <a height="600" data-chrome="noborders" class="twitter-timeline" href="https://twitter.com/hangfireio" data-widget-id="451027617567621120"></a>
+            <h3>Twitter <small>by <a href="https://twitter.com/hangfireio" target="_blank">@hangfireio</a></small></h3>
+            <a height="335" data-chrome="noborders noheader nofooter" class="twitter-timeline" href="https://twitter.com/hangfireio" data-widget-id="451027617567621120"></a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+            <h3 style="margin-top: 5px;">Pluralsight Course</h3>
+            <div class="div-thumbnail">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FIhpte9UVHM?rel=0&amp;showinfo=0" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
     </div>
     <hr>
