--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ description: An easy way to perform fire-and-forget, delayed and recurring tasks
             <div class="col-md-7">
                 <h1 itemprop="name">Hangfire</h1>
                 <p style="margin-bottom: 10px;">
-                    An easy way to perform background processing in your .NET and .NET Core applications.
+                    An easy way to perform background processing in .NET and .NET Core applications.
                     No Windows Service or separate process required.
                 </p>
                 <p>
