--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Hangfire – Background jobs and workers for ASP.NET
+title: Hangfire – Background jobs and workers for .NET and .NET Core
 jumbotron: true
 keywords: asp.net background jobs, asp.net background workers
-description: An easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.
+description: An easy way to perform background processing in .NET and .NET Core applications. No Windows Service or separate process required.
 ---
 
 <div id="fb-root"></div>
