--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
                 <iframe src="https://ghbtns.com/github-btn.html?user=HangfireIO&repo=Hangfire&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="97" height="20"></iframe>
 
-                <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfireio" data-url="https://www.hangfire.io">Tweet</a>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-dnt="true" data-via="hangfireio" data-url="https://www.hangfire.io">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
            
             </div>
