Use youtube-nocookie domain for embedded video

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
             <h3 style="margin-top: 5px;">Pluralsight Course</h3>
             <div class="div-thumbnail">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FIhpte9UVHM?rel=0&amp;showinfo=0" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/FIhpte9UVHM?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
