Make Pro badges at the main page links to Pro Overview

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Batches <div class="label label-primary">Pro</div></h3>
+                    <h3>Batches <a href="/pro/" class="label label-primary">Pro</a></h3>
                     <p>Batch is a group of background jobs that is <strong>created atomically</strong> and considered as a single entity.</p>
                     <pre><code><span class="keywd">var</span> batchId = <span class="type">BatchJob</span>.StartNew(x =>
 {
@@ -159,7 +159,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
 });</code></pre>
                 </div>
                 <div class="col-md-6">
-                    <h3>Batch Continuations <div class="label label-primary">Pro</div></h3>
+                    <h3>Batch Continuations <a href="/pro/" class="label label-primary">Pro</a></h3>
                     <p>
                         Batch continuation is fired <strong>when all</strong> background jobs in a parent batch <strong>finished</strong>.
                     </p>
