Use NuGet-based version badge for accuracy reasons
GitHub Releases-based badge doesn't work correctly in edge cases, when release was published to GitHub, but not already available on NuGet. Also when publishing releases for previous versions, they are displayed instead of the newer versions.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
                 </p>
                 <p>   
                 <a href="https://www.nuget.org/packages/Hangfire/" target="_blank">
-                    <img src="https://img.shields.io/github/release/HangfireIO/Hangfire.svg?style=flat" alt="Latest release"></a>
+                    <img src="https://img.shields.io/nuget/v/Hangfire.Core?label=release" alt="Latest release"></a>
                 &nbsp;
                 <a href="https://www.nuget.org/packages/Hangfire.Core/" target="_blank">
                     <img src="https://img.shields.io/nuget/dt/Hangfire.Core.svg?style=flat" alt="Package downloads"></a>
