--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
         <div class="col-md-9">
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Fire-and-forget jobs</h3>
+                    <h3>Fire-and-Forget Jobs</h3>
                     <p>
                         Fire-and-forget jobs are executed <strong>only once</strong> and almost <strong>immediately</strong> after creation.
                     </p>
@@ -119,7 +119,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
     () => <span class="type">Console</span>.WriteLine(<span class="string">"Fire-and-forget!"</span>));</pre>
                                     </div>
                 <div class="col-md-6">
-                    <h3>Delayed jobs</h3>
+                    <h3>Delayed Jobs</h3>
                     <p>
                         Delayed jobs are executed <strong>only once</strong> too, but not immediately, after a certain <strong>time interval</strong>.
                     </p>
@@ -130,7 +130,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Recurring jobs</h3>
+                    <h3>Recurring Jobs</h3>
                     <p>
                         Recurring jobs fire <strong>many times</strong> on the specified <strong>CRON schedule</strong>.
                     </p>
