--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
                 <i class="fa fa-github" style="font-size: 23px;"></i>
             </div>
             <div class="feature-body">
-                <h3>Open source</h3>
+                <h3>Open Source</h3>
                 <p>
                     Hangfire is open source software and is completely free for commercial use. It is licensed under <a href="https://github.com/HangfireIO/Hangfire/blob/master/LICENSE.md">LGPLv3 license</a>.
                 </p>
