--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
                         Recurring jobs fire <strong>many times</strong> on the specified <strong>CRON schedule</strong>.
                     </p>
                     <pre><span class="type">RecurringJob</span>.AddOrUpdate(
-    <span class="string">"myrecurringjob"</span>
+    <span class="string">"myrecurringjob"</span>,
     () => <span class="type">Console</span>.WriteLine(<span class="string">"Recurring!"</span>),
     <span class="type">Cron</span>.Daily);</pre>
                 </div>
