Improve wording for persistent storages

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
             <div class="feature-body">
                 <h3>Persistent</h3>
                 <p>
-                    Background jobs are created in a persistent storage&nbsp;– <a href="https://www.nuget.org/packages/HangFire.SqlServer/">SQL Server</a>, <a href="https://nuget.hangfire.io/feeds/hangfire-pro/Hangfire.Pro.Redis/1.2.1">Redis</a>, <a href="https://www.nuget.org/packages/Hangfire.PostgreSql/">PostgreSQL</a>, <a href="https://www.nuget.org/packages/HangFire.Mongo/">MongoDB</a> and <a href="/extensions.html#storages">others</a>.
+                    Background jobs are created in a persistent storage&nbsp;– <a href="https://docs.hangfire.io/en/latest/configuration/using-sql-server.html">SQL Server</a> and <a href="https://docs.hangfire.io/en/latest/configuration/using-redis.html">Redis</a> supported officially, and a lot of other <a href="/extensions.html#storages">community-driven</a> storages.
                 </p>
                 <p>
                     You can safely restart your application and use Hangfire with ASP.NET without worrying about application pool recycles.
