Replace http with https in some links

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
             <div class="feature-body">
                 <h3>Simple</h3>
                 <p>
-                    <a href="http://docs.hangfire.io/en/latest/quick-start.html" target="_blank">Easy to set up, easy to use</a>. No Windows Service, no Windows Scheduler, no separate applications required.
+                    <a href="https://docs.hangfire.io/en/latest/quick-start.html" target="_blank">Easy to set up, easy to use</a>. No Windows Service, no Windows Scheduler, no separate applications required.
                 </p>
                 <p>
                     Background jobs are regular static or instance .NET methods with regular arguments – no base class or interface implementation required.
@@ -222,7 +222,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
                     Built-in web interface allow you to see the whole picture of your background processing, as well as observe the state of each background job.
                 </p>
                 <p>
-                    Out of the box support for popular <a href="http://docs.hangfire.io/en/latest/configuration/configuring-logging.html">logging frameworks</a> allows you to catch errors early with zero configuration.
+                    Out of the box support for popular <a href="https://docs.hangfire.io/en/latest/configuration/configuring-logging.html">logging frameworks</a> allows you to catch errors early with zero configuration.
                 </p>
             </div>
         </div>
@@ -318,7 +318,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
                 <br class="visible-xs">
                 <span class="btn btn-lg">or</span>
                 <br class="visible-xs">
-                <a class="btn btn-default btn-lg" href="http://docs.hangfire.io">Documentation</a>
+                <a class="btn btn-default btn-lg" href="https://docs.hangfire.io">Documentation</a>
             </div>
         </div>
     </div>
