Generate recent news from blog articles, not from Twitter

--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
             </div>
         </div>
         <div class="col-md-3 hidden-xs hidden-sm">
-            <h3>Twitter <small>by <a href="https://twitter.com/hangfireio" target="_blank">@hangfireio</a></small></h3>
-            <a height="335" data-dnt="true" data-chrome="noborders noheader nofooter" class="twitter-timeline" href="https://twitter.com/hangfireio"></a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            {% include news.html %}
 
             <h3 style="margin-top: 5px;">Pluralsight Course</h3>
             <div class="div-thumbnail">
