--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ description: An easy way to perform background processing in .NET and .NET Core 
                 </div>
             </div>
         </div>
-        <div class="col-md-3 hidden-xs hidden-sm">
+        <div class="col-md-3">
             {% include news.html %}
 
             <h3 style="margin-top: 5px;">Pluralsight Course</h3>
