Specify image dimensions explicitly

--- a/index.html
+++ b/index.html
@@ -47,47 +47,47 @@ description: An easy way to perform background processing in .NET and .NET Core 
                     <div class="carousel-inner">
                         <div class="item active">
                             <a href="{{ site.cdn }}/img/ui/dashboard.png" data-lightbox="Screenshots" data-title="Dashboard">
-                                <img itemprop="image" src="{{ site.cdn }}/img/ui/dashboard-sm.png" alt="Dashboard">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/dashboard-sm.png" width="450" height="267" alt="Dashboard">
                             </a>
                         </div>
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/queues.png" data-lightbox="Screenshots" data-title="Queue List">
-                                <img src="{{ site.cdn }}/img/ui/queues-sm.png" alt="Queue List">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/queues-sm.png" width="450" height="267" alt="Queue List">
                             </a>
                         </div>
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/job-details.png" data-lightbox="Screenshots" data-title="Job Details">
-                                <img src="{{ site.cdn }}/img/ui/job-details-sm.png" alt="Job Details">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/job-details-sm.png" width="450" height="267" alt="Job Details">
                             </a>
                         </div>
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/retries.png" data-lightbox="Screenshots" data-title="Retry List">
-                                <img src="{{ site.cdn }}/img/ui/retries-sm.png" alt="Retry List">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/retries-sm.png" width="450" height="267" alt="Retry List">
                             </a>
                         </div>
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/failed-jobs.png" data-lightbox="Screenshots" data-title="Failed Job List">
-                                <img src="{{ site.cdn }}/img/ui/failed-jobs-sm.png" alt="Failed Job List">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/failed-jobs-sm.png" width="450" height="267" alt="Failed Job List">
                             </a>
                         </div>
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/recurring-jobs.png" data-lightbox="Screenshots" data-title="Recurring Jobs">
-                                <img src="{{ site.cdn }}/img/ui/recurring-jobs-sm.png" alt="Recurring Jobs">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/recurring-jobs-sm.png" width="450" height="267" alt="Recurring Jobs">
                             </a>
                         </div>          
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/batches.png" data-lightbox="Screenshots" title="Batch List">
-                                <img src="{{ site.cdn }}/img/ui/batches-sm.png" alt="Batch List">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/batches-sm.png" width="450" height="267" alt="Batch List">
                             </a>
                         </div>
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/batch-details.png" data-lightbox="Screenshots" title="Batch Details">
-                                <img src="{{ site.cdn }}/img/ui/batch-details-sm.png" alt="Batch Details">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/batch-details-sm.png" width="450" height="267" alt="Batch Details">
                             </a>
                         </div>
                         <div class="item">
                             <a href="{{ site.cdn }}/img/ui/batch-jobs.png" data-lightbox="Screenshots" title="Batch Jobs">
-                                <img src="{{ site.cdn }}/img/ui/batch-jobs-sm.png" alt="Batch Jobs">
+                                <img itemprop="image" src="{{ site.cdn }}/img/ui/batch-jobs-sm.png" width="450" height="267" alt="Batch Jobs">
                             </a>
                         </div>
                     </div>
@@ -179,10 +179,14 @@ description: An easy way to perform background processing in .NET and .NET Core 
                 <div id="carousel-courses" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <a href="https://www.udemy.com/course/building-background-services-in-net-with-hangfire/?referralCode=ADE705B8BB4A44749A7D" target="_blank"><img src="{{ site.cdn }}/img/udemy.png" alt="Udemy Course"/></a>
+                            <a href="https://www.udemy.com/course/building-background-services-in-net-with-hangfire/?referralCode=ADE705B8BB4A44749A7D" target="_blank">
+                                <img src="{{ site.cdn }}/img/udemy.png" width="252" height="142" alt="Udemy Course">
+                            </a>
                         </div>
                         <div class="item">
-                            <a href="https://www.pluralsight.com/courses/simplified-dotnet-background-tasks-hangfire" target="_blank"><img src="{{ site.cdn }}/img/pluralsight.png" alt="Pluralsight Course"/></a>
+                            <a href="https://www.pluralsight.com/courses/simplified-dotnet-background-tasks-hangfire" target="_blank">
+                                <img src="{{ site.cdn }}/img/pluralsight.png" width="252" height="142" alt="Pluralsight Course">
+                            </a>
                         </div>                        
                     </div>
 
